When converting between colorspaces make sure that a full conversion is only done when more than the bit depth canges.

When converting between two equal colorspaces where only the channel size is
different, the pixel values should only be scaled to the new channel size.
BUG:281761